Complete Thoth Module Byzantine Fault Tolerance Remediation (#95)
* Create comprehensive project management infrastructure for Thoth Byzantine FT remediation

- Enhanced execution_state.json with detailed issue tracking for 4 critical + 4 significant issues
- Created METHODOLOGY.md: Engineering discipline, test-first BFT, metrics-driven development
- Created ISSUE_TRACKER.md: Detailed analysis of all 8 issues with detection and fix strategies
- Updated CONTINUATION_PROMPT.md: Real project context for session resumption
- Created CHECKPOINT-0: Infrastructure initialization checkpoint

Infrastructure enables 6-8 week systematic remediation across 3 phases:
- Phase 1 (2w): Fix critical issues (Byzantine detection, validation, metrics)
- Phase 2 (2.5w): Core enhancements (multisig, error handling, resources)
- Phase 3 (2.5w): Integration and scalability testing

Status: Infrastructure complete, ready for strategic planning
References: THOTH-BFT-001, THOTH-BFT-002, THOTH-BFT-003, THOTH-BFT-004

* Add comprehensive PROJECT_HANDOFF.md for strategic planning

Document handoff includes:
- Executive summary: 4 critical + 4 significant issues requiring systematic remediation
- Phase structure: 3 phases × 2-2.5 weeks (6-8 weeks total)
- Critical issues with detailed detection/fix strategies
- Engineering discipline: Test-first Byzantine FT, metrics-driven, validation-first
- Metrics and tracking: Targets for Phase 1 (Byzantine detection <100ms, metrics <1% overhead)
- Bead creation requirements: Epic + 4 feature beads + supporting beads
- Success criteria: Measurable targets for each phase
- Risk assessment and mitigation strategies
- Timeline and communication plan

Ready for strategic-planner to create initial beads and project plan

* Implement Phase 1 BFT foundation infrastructure (partial)

Phase 1 delivers Byzantine fault tolerance infrastructure but requires
integration work before merge. This commit adds exception hierarchy,
metrics interface/implementations, and thread